Fixed code, all runs smooth now!

--- a/Outcome 2 Code.Rmd
+++ b/Outcome 2 Code.Rmd
@@ -79,10 +79,10 @@ City        Approximate # households
 set.seed(228)
 stream_pop <- declare_population(
   stream = add_level(N = 10,
-                    stream = #average flow?
+                    stream_flow = #average flow?
                       c(0.8,0.8,0.7,0.6,0.5,0.4,0.2,0.2,0.1,0.1)), # based on different stream size branching off main waterway
   stream_size = add_level(N = c(2000,2000,1700,1400,1150,900,400,400,100,100), #name variables in a way that corresponds with actual data
-                      know = draw_binary(stream))) # 
+                      know = draw_binary(stream_flow))) # 
 
 pop <- stream_pop()
 pop.vector <- c(2000,2000,1700,1400,1150,900,400,400,100,100)
@@ -131,7 +131,7 @@ stream_answer <- declare_estimator(
 
 stream_design <- stream_pop + my_estimand + stream_research + stream_sampling + stream_answer
 
-stream_diagnosis <- diagnose_design(stream_design, sims = 1000)
+stream_diagnosis <- diagnose_design(stream_design, sims = 100)
 
 stream_diagnosis$diagnosands_df[,c(8,9,6,10)] %>% 
   kable()
